--- a/src/app/layout/root/root.component.scss
+++ b/src/app/layout/root/root.component.scss
@@ -1,5 +1,5 @@
 @import "../../common.scss";
-@import "../../../assets/scss/vars";
+@import "../../../styles.scss";
 
 .darkBackground {
   position: absolute;
