--- a/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
+++ b/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
@@ -20,7 +20,7 @@ infinite-scroll
   </mat-card>
   <mat-card id="nolist" *ngIf="!isList && condition.select==='google'">
     <mat-card-content>
-      Googleで任意ののスポットを検索できます。<br>
+      Googleで任意のスポットを検索できます。<br>
       キーワードを入れ替えて検索してください。<br>
       （これらのスポットもプランに入れることができます。）
     </mat-card-content>
