--- a/src/app/pages/planspot/components/search-dialog/search-dialog.component.html
+++ b/src/app/pages/planspot/components/search-dialog/search-dialog.component.html
@@ -5,7 +5,7 @@
       aria-label="close"
       class="close"
       color="white"
-      [mat-dialog-close]="result"
+      [mat-dialog-close]="condition"
     >
       <mat-icon>clear</mat-icon>
     </button>
