--- a/src/app/pages/planspot/components/search-dialog/search-dialog.component.scss
+++ b/src/app/pages/planspot/components/search-dialog/search-dialog.component.scss
@@ -121,7 +121,7 @@
 
       .mat-tab-label-container{
         .mat-tab-labels{
-          justify-content: space-between;
+          // justify-content: space-between;
           .mat-tab-label {
             min-width: 30vw;
             padding: 0 12px;
