--- a/src/app/pages/planspot/components/search-dialog/search-dialog.component.scss
+++ b/src/app/pages/planspot/components/search-dialog/search-dialog.component.scss
@@ -98,8 +98,8 @@
       width: 100%;
     }
   }
-
-  mat-dialog-content {
+  
+  #searchdialog {
     // max-height: 70vh;
     // margin-bottom: 8em;
     min-height: 70vh;
