--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
@@ -37,7 +37,7 @@
           </mat-option>
         </mat-select>
       </mat-form-field>
-      <button mat-button class="spot-search" (click)="openDialog(0)">
+      <button mat-button class="spot-search" (click)="openDialog()">
         {{ 'AreaAndCommitment' | translate }}
       </button>
     </div>
