--- a/src/app/pages/planspot/components/search-dialog/search-dialog.component.html
+++ b/src/app/pages/planspot/components/search-dialog/search-dialog.component.html
@@ -14,8 +14,8 @@
     </button> -->
   </mat-dialog-actions>
 
-  <mat-dialog-content>
-    <mat-tab-group [selectedIndex]="tabIndex">
+  <mat-dialog-content id="searchdialog">
+    <mat-tab-group [selectedIndex]="tabIndex" (selectedIndexChange)="onTabChanged($event)">
       <mat-tab translate label="{{ 'Areas' | translate }}">
 
         <mat-accordion [multi]="true" formArrayName="areas">
@@ -25,7 +25,7 @@
             (opened)="onAreaCollapseOpen(i, item.value.parentId)"
             (closed)="onAreaCollapseClose(i)"
             [expanded]="isExpended(i)"
-            [@.disabled]="true"
+            [disabled]="item.value.qty === 0 ? true : false"
           >
             <mat-expansion-panel-header
               [collapsedHeight]="'45px'"
@@ -44,7 +44,6 @@
                   [checked]="item.value.selected"
                   formControlName="selected"
                   (click)="onAreaAllClick(i)"
-                  [attr.disabled]="item.value.qty === 0 ? true : null"
                 />
               </div>
               <div formArrayName="dataSelecteds">
@@ -68,7 +67,7 @@
                     />
                     <label for="{{ sub.value.id }}">
                       {{ sub.value.name | langFilter: lang
-                      }}<span class="qty">({{ sub.value.qty }})</span>
+                      }}<!--span class="qty">({{ sub.value.qty }})</span-->
                     </label>
                   </li>
                 </ul>
@@ -108,7 +107,7 @@
                   />
                   <label for="{{ sub.value.id }}">
                     {{ sub.value.name | langFilter: lang
-                    }}<span class="qty">({{ sub.value.qty }})</span>
+                    }}<!--span class="qty">({{ sub.value.qty }})</span-->
                   </label>
                 </li>
               </ul>
@@ -116,44 +115,6 @@
           </div>
         </mat-card>
       </mat-tab>
-      <!-- <mat-tab label="{{ 'Options' | translate }}">
-        <mat-card formArrayName="addes" class="card">
-          <div
-            *ngFor="let item of addes.controls; let i = index"
-            [formGroupName]="i"
-          >
-            <mat-card-title>
-              {{ item.value.parentName | langFilter: lang }}
-            </mat-card-title>
-            <mat-card-content formArrayName="dataSelecteds">
-              <ul style="list-style: none;">
-                <li
-                  *ngFor="
-                    let sub of item['controls'].dataSelecteds['controls'];
-                    let j = index
-                  "
-                  [formGroupName]="j"
-                  class="list_item"
-                >
-                  <input
-                    [id]="sub.value.id"
-                    type="checkbox"
-                    [value]="sub.value.id"
-                    [checked]="sub.value.selected"
-                    formControlName="selected"
-                    [attr.disabled]="sub.value.qty === 0 ? true : null"
-                    (change)="onAddesChange($event)"
-                  />
-                  <label for="{{ sub.value.id }}">
-                    {{ sub.value.name | langFilter: lang
-                    }}<span class="qty">({{ sub.value.qty }})</span>
-                  </label>
-                </li>
-              </ul>
-            </mat-card-content>
-          </div>
-        </mat-card>
-      </mat-tab> -->
     </mat-tab-group>
   </mat-dialog-content>
   <div class="footer">
