--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -3,7 +3,7 @@
       <mat-toolbar-row>
         <span style="flex-basis: 80%;">
           <!-- Remoju -->
-          <a *ngIf="!tollSpotLogo" href="/{{ currentLang }}/spots" style="min-height:54px;">
+          <a *ngIf="!tollSpotLogo" href="/{{ currentLang }}/planspot" style="min-height:54px;">
             <img src="../../../assets/img/remoju-logo-b.svg" class="imgsp" alt="remoju-app" width="227" height="58" />
           </a>
           <!-- Keihan -->
