--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
@@ -11,7 +11,7 @@
       justify-content: center;
       &.title{
         font-size: 14px;
-        padding: 12px 12px 16px;
+        padding: 6px 12px;
       }
       
       input{
@@ -26,12 +26,13 @@
       }
 
       &.switch{
+        $r:4px;
         margin: 0.7em 0 0.2em;
         justify-content: flex-end;
         .switch-toggle {
           background: #7D9E9F;
-          height: 24px;
-          border-radius: 6px;
+          height: 34px;
+          border-radius: $r;
           display: flex;
           justify-content: center;
           align-items: center;
@@ -67,14 +68,14 @@
             &#all{
               &:checked + label{
                 background:#797E86;
-                border-radius: 6px 0 0 6px;
+                border-radius: $r 0 0 $r;
               }
             }
 
             &#google{
               &:checked + label{
                 background:#797E86;
-                border-radius: 0 6px 6px 0;
+                border-radius: 0 $r $r 0;
               }
             }
           }
