--- a/src/app/pages/planspot/planspot.component.html
+++ b/src/app/pages/planspot/planspot.component.html
@@ -1,4 +1,8 @@
-<app-planspot-selector [count]="count" [condition]="condition" [mSort]="$mSort" (event)="onPlanSpotChange($event)" (sort)="sortChange($event)" (keyword)="keywordSearch($event)" (open)="openDialog()"></app-planspot-selector>
+<app-planspot-selector id="psheader" [count]="count" [condition]="condition" [mSort]="$mSort" 
+(event)="onPlanSpotChange($event)" 
+(sort)="sortChange($event)" 
+(keyword)="keywordSearch($event)" 
+(open)="openDialog($event)"></app-planspot-selector>
 <app-planspot-list (scrolled)="onScrollDown()" [isList]="isList" [condition]="condition">
   <app-planspot-list-item
     *ngFor="let item of details$"
