--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -27,6 +27,7 @@ header {
   display: flex;
   justify-content: space-around;
   height: 50px;
+  padding-right: 0!important;
 
   .imgpc {
     height: 94px;
@@ -82,7 +83,7 @@ header {
 
   .menu{
     .mat-icon{
-      font-size: 37px;
+      font-size: 24px;
       height: auto;
       width: auto;
     }
@@ -95,8 +96,8 @@ header {
   .feature{
     button{
       img{
-        width: 30px;
-        height: 30px;
+        width: 27px;
+        height: 27px;
       }
       &.user{
         img{
