--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -25,9 +25,10 @@ header {
   background: #fff;
   padding: 4px 0 4px 8px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   height: 50px;
-  padding-right: 0!important;
+  padding: 0!important;
+  position: relative;
 
   .imgpc {
     height: 94px;
@@ -35,9 +36,9 @@ header {
   }
 
   .imgsp {
-    width: 29vw; //42vw;
+    width: 27vw; //42vw;
     margin-top: 2vw; //1vw
-    margin-left: 1vw;
+    margin-left: 16px;
   }
 
   @media screen and (min-width: 415px) and (max-width: 1024px) { 
@@ -80,8 +81,16 @@ header {
 
 ::ng-deep.mat-toolbar.mat-primary {
   color: #666;
-
+  
   .menu{
+    z-index: 2;
+    .mat-icon-button.favorite{
+      img{
+        width: 27px;
+        height: 27px;
+      }
+    }
+    
     .mat-icon{
       font-size: 24px;
       height: auto;
@@ -91,6 +100,8 @@ header {
     .mat-icon-button.mat-primary{
         color: $color-gry06;
     }
+
+
   }
 
   .feature{
@@ -106,6 +117,16 @@ header {
       }
     }
   }
+
+  .guide{
+    position: absolute;
+    font-size: 13px;
+    color: #000;
+    width: 100%;
+    margin: auto;
+    text-align: center;
+  }
+  
 }
 
 .humbmenu {
