--- a/src/app/pages/planspot/components/search-dialog/search-dialog.component.html
+++ b/src/app/pages/planspot/components/search-dialog/search-dialog.component.html
@@ -33,7 +33,7 @@
             >
               <div class="box">
                 <span class="pref" [ngClass]="{'bold':item.value.isHighlight,'disabled':item.value.qty === 0 }">{{ item.value.parentName | langFilter: lang }}</span>
-                <!--span class="qty">({{ item.value.qty }})</span-->
+                <span class="qty">({{ item.value.qty }})</span>
               </div>
             </mat-expansion-panel-header>
             <ng-template matExpansionPanelContent>
