--- a/src/app/pages/planspot/components/search-dialog/search-dialog.component.html
+++ b/src/app/pages/planspot/components/search-dialog/search-dialog.component.html
@@ -108,7 +108,7 @@
                   />
                   <label for="{{ sub.value.id }}">
                     {{ sub.value.name | langFilter: lang
-                    }}<!--span class="qty">({{ sub.value.qty }})</span-->
+                    }}<span class="qty">({{ sub.value.qty }})</span>
                   </label>
                 </li>
               </ul>
