--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
@@ -9,21 +9,42 @@
     .row{
       display: flex;
       justify-content: center;
+      position: relative;
       &.title{
         font-size: 14px;
         padding: 6px 12px;
       }
       
-      input{
-        width: 100%;
-        height: 34px;
-        line-height: 34px;
-        border: 1px solid #B7B7B7;
-        border-radius: 17px;
-        padding: 0 17px;
-        font-size: 16px;
-        -webkit-appearance: none;
+      &.input{
+        input{
+          width: 100%;
+          height: 34px;
+          line-height: 34px;
+          border: 1px solid #B7B7B7;
+          border-radius: 17px;
+          padding: 0 17px 0 27px;
+          font-size: 16px;
+          -webkit-appearance: none;
+        }
+        img.prefix{
+          position: absolute;
+          left: 0;
+          width: 18px;
+          top: 7px;
+          left: 7px;
+        }
+        button.reset{
+          all:unset;
+          position: absolute;
+          right: 8px;
+          top: 0;
+          bottom: 0;
+          img{
+            width: 21px;
+          }
+        }
       }
+      
 
       &.switch{
         $r:4px;
