upd0819 adjust ipad header logo

--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -44,8 +44,8 @@ header {
   @media screen and (min-width: 415px) and (max-width: 1024px) { 
     .imgsp {
       margin-top: 1vw;
-      margin-left: 0vw;
-      width: 17vw;
+      margin-left: 16px;
+      width: 16vw;
     }
   }
 
