--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
@@ -378,7 +378,7 @@
       border-left:  $color-gry07 solid 1px ;
       border-right:  $color-gry07 solid 1px ;
       border-radius: 0 0 10px 10px;
-      min-height: 206px;
+      height: 206px;
       .bottom-view{
         // display: flex;
         // flex-direction: row;
@@ -744,7 +744,7 @@
     width: calc(100%/2);
     float: left;
     .header{
-      min-height: 56px;
+      min-height: 58px;
     }
   }  
 }
