--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
@@ -214,4 +214,64 @@
       }
     }
   }
+
+  .popup{
+    position: fixed;
+    width: calc(100% - 32px);
+    height: 44px;
+    right: 0;
+    left: 0;
+    top: -100px;
+    margin: auto;
+    background-color: #fff;
+    border: 1px solid #B7B7B7;
+    border-radius: 0 0 8px 8px;
+    z-index: 20;
+    box-shadow: 0 0 10px rgb(0 0 0 / 30%);
+    transition: all 300ms 0s ease;
+    
+    &.on{
+      top:0;
+    }
+
+    .popupInner{
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      font-size: 13px;
+      margin: 0;
+      padding: 0;
+      line-height: 1;
+      height: 100%;
+
+      button.popupItem{
+        all: unset;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        height: 100%;
+        padding: 0 4px;
+        border-right: 1px solid #eee;
+        span{
+          width: 100%;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+        }
+        &.cnt{
+          width: 15%;
+        }
+        &.are{
+          width: 35%;
+        }
+        &.cat{
+          width: 40%;
+        }
+        &.reset{
+          border-right: none;
+        }
+      }
+    }
+  }
 }
