--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
@@ -58,7 +58,7 @@
         <span>{{searchTarms?.cate}}</span>
       </button>
       <button class="popupItem reset" (click)="condReset()">
-        <span>reset</span>
+        <img src="../../../../../assets/img/pop_reset.svg" alt="">
       </button>
     </div>
   </div>
