--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
@@ -65,11 +65,14 @@
     .link-area{
       position: absolute;
       top: 0;
-      width: 100%;
-      height: 50%;
-      margin-top: 100px;
-      z-index: 4;
+      left: 0;
+      right: 0;
+      width: 63%;
+      height: 70%;
+      z-index: 6;
       cursor: pointer;
+      margin: auto;
+      margin-top: 20%;
     }
 
     .card-header{
