--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
@@ -224,7 +224,7 @@
     top: -100px;
     margin: auto;
     background-color: #fff;
-    border: 1px solid #B7B7B7;
+    //border: 1px solid #B7B7B7;
     border-radius: 0 0 8px 8px;
     z-index: 20;
     box-shadow: 0 0 10px rgb(0 0 0 / 30%);
@@ -261,15 +261,33 @@
         }
         &.cnt{
           width: 15%;
+          text-align: center;
         }
         &.are{
           width: 35%;
+          &::before{
+            content:url('../../../../../assets/img/pop_area.svg')!important;
+            width: 9px;
+            height: 11px;
+            padding-right: 2px;
+          }
         }
         &.cat{
           width: 40%;
+          border-right: none;
+          &::before{
+            content:url('../../../../../assets/img/pop_keyword.svg')!important;
+            width: 12px;
+            height: 13px;
+            padding-right: 2px;
+          }
         }
         &.reset{
           border-right: none;
+          img{
+            width: 18px;
+            margin: auto 4px;
+          }
         }
       }
     }
