--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
@@ -223,7 +223,7 @@
     left: 0;
     top: -100px;
     margin: auto;
-    background-color: #fff;
+    background-color: #ffffffeb;
     //border: 1px solid #B7B7B7;
     border-radius: 0 0 8px 8px;
     z-index: 20;
