--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
@@ -1,7 +1,7 @@
 <mat-card id="planspot-selector">
   <mat-card-content>
     <div class='row title'>
-      みんなのおすすめを探す
+      {{ "FindEveryoneRecommendations" | translate}}
     </div>
     <div class='row input'>
       <input type="text" 
