--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
@@ -48,7 +48,7 @@
 
       &.switch{
         $r:4px;
-        margin: 0.7em 0 0.2em;
+        margin: 0.9em 0 0.2em;
         justify-content: flex-end;
         .switch-toggle {
           background: #7D9E9F;
@@ -106,6 +106,7 @@
             width: 74px;
             &.plan{
               //width: 58px;
+              position: relative;
               &::before{
                 content: "";
                 display: inline-block;
@@ -115,9 +116,19 @@
                 vertical-align: middle;
                 margin-left: 2px;
               }
+              &::after{
+                position: absolute;
+                margin: auto;
+                content: url("../../../../../assets/img/icon_recomm.svg");
+                width: 50px;
+                top:-5px;
+                left: 0;
+                right: 0;
+              }
             }
             &.spot{
               //width: 58px;
+              position: relative;
               &::before{
                 content: "";
                 display: inline-block;
@@ -126,6 +137,15 @@
                 background: url("../../../../../assets/img/pref_spot.svg") no-repeat;
                 vertical-align: middle;
                 margin-right: 2px;
+              }
+              &::after{
+                position: absolute;
+                margin: auto;
+                content: url("../../../../../assets/img/icon_recomm.svg");
+                width: 50px;
+                top:-5px;
+                left: 0;
+                right: 0;
               }
             }
             &.google{
