--- a/src/app/pages/planspot/components/search-dialog/search-dialog.component.html
+++ b/src/app/pages/planspot/components/search-dialog/search-dialog.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="searchForm">
-  <mat-dialog-actions>
+  <mat-dialog-actions id="searchdialogaction">
     <button
       mat-mini-fab
       aria-label="close"
