--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,9 +1,9 @@
 <header>
     <mat-toolbar color="primary">
       <mat-toolbar-row>
-        <span>
+        <span class="logo">
           <!-- Remoju -->
-          <a *ngIf="!tollSpotLogo" href="/{{ currentLang }}/planspot" style="min-height:54px;">
+          <a href="/{{ currentLang }}/" style="min-height:54px;">
             <img src="../../../assets/img/remoju-logo-b.svg" class="imgsp" alt="remoju-app" />
           </a>
         </span>
