--- a/src/app/parts/image-cropper-dialog/image-cropper-dialog.component.html
+++ b/src/app/parts/image-cropper-dialog/image-cropper-dialog.component.html
@@ -42,7 +42,7 @@
   (imageCropped)="imageCropped($event)"
   (cropperReady)="cropperReady()"></image-cropper>
 
-  <img width="100%" height="100%" [src]="data.imageCropped ? data.imageCropped : data.picturePreviewUrl" />
+  <!-- <img width="100%" height="100%" [src]="data.imageCropped ? data.imageCropped : data.picturePreviewUrl" /> -->
 
 </mat-dialog-content>
 <mat-dialog-actions>
