--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -319,6 +319,7 @@
       display: flex;
       margin: initial;
       align-items: center;
+      position: relative;
       &.th{
         line-height: 24px;
         dt{
@@ -340,6 +341,9 @@
             all: initial;
             &.remove{
               @include ios-reset;
+              position: absolute;
+              top: 19px;
+              left: 16px;
               &::before{
                 content: url("../../../assets/img/icon_delete.svg");
                 width: 17px;
@@ -517,6 +521,11 @@
         }
         &:nth-child(3){
           flex-basis: 12%;
+          img{
+            position: absolute;
+            top: 24px;
+            right: 16px;
+          }
         }
       }
     }
