--- a/src/app/parts/image-cropper-dialog/image-cropper-dialog.component.html
+++ b/src/app/parts/image-cropper-dialog/image-cropper-dialog.component.html
@@ -30,6 +30,7 @@
   [imageFile]="data.pictureFile"
   [aspectRatio]="1 / 1"
   [imageQuality]=100
+  [roundCropper]="data.roundCropper"
   format="webp"
   (imageCropped)="imageCropped($event)"
   (cropperReady)="cropperReady()"></image-cropper>
